WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
107170
Threaded parser hangs when encountering an unmatched </script> tag
https://bugs.webkit.org/show_bug.cgi?id=107170
Summary
Threaded parser hangs when encountering an unmatched </script> tag
Eric Seidel (no email)
Reported
2013-01-17 13:36:06 PST
Threaded parser hangs when encountering an unmatched </script> tag
Attachments
Patch
(6.92 KB, patch)
2013-01-17 13:38 PST
,
Eric Seidel (no email)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eric Seidel (no email)
Comment 1
2013-01-17 13:38:28 PST
Created
attachment 183261
[details]
Patch
WebKit Review Bot
Comment 2
2013-01-17 15:07:27 PST
Comment on
attachment 183261
[details]
Patch Clearing flags on attachment: 183261 Committed
r140055
: <
http://trac.webkit.org/changeset/140055
>
WebKit Review Bot
Comment 3
2013-01-17 15:07:30 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug